spacing fixed

--- a/assets/css/newstyles.css
+++ b/assets/css/newstyles.css
@@ -43,6 +43,10 @@ p{
     margin: 0px 75px;
 }
 
+.contentspacing{
+    padding: 50px 100px;
+}
+
 /* Nav bar */
 .navbar {
     display: flex;
